--- a/.github/workflows/man-page-build-install.yml
+++ b/.github/workflows/man-page-build-install.yml
@@ -5,7 +5,59 @@ on:
   pull_request:
 
 jobs:
-  man-pages-build-install:
+  man-pages-build-install-without-modules:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout valkey-doc
+      uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+      with:
+        path: valkey-doc
+
+    - name: Checkout valkey
+      uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+      with:
+        repository: valkey-io/valkey
+        path: valkey
+
+    - name: Set up Python
+      uses: actions/setup-python@7f4fc3e22c37d6ff65e88745f38bd3157c663f7c # v4.9.1
+      with:
+        python-version: '3.x'
+
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y make pandoc python3-pip
+        pip3 install pyyaml
+
+    - name: Build and install man pages
+      working-directory: valkey-doc
+      run: |
+        make VALKEY_ROOT=$GITHUB_WORKSPACE/valkey \
+              -j;
+
+    - name: Verify man pages build
+      working-directory: valkey-doc
+      run: |
+        if [ ! -d "_build/man" ]; then
+          echo "Error: Man pages directory '_build/man' not found!"
+          exit 1
+        fi
+        
+        # Check if the directory contains any files
+        if [ -z "$(ls -A _build/man)" ]; then
+          echo "Error: No man pages were generated in '_build/man'!"
+          exit 1
+        fi
+        echo "Man pages successfully built in _build/man/"
+
+    - name: Install man pages
+      working-directory: valkey-doc
+      run: |
+        sudo make install INSTALL_MAN_DIR=/usr/local/share/man
+
+  man-pages-build-install-with-modules:
     runs-on: ubuntu-latest
 
     steps:
