adds perm to read only
Signed-off-by: Roshan Khatri <rvkhatri@amazon.com>

--- a/.github/workflows/man-page-build-install.yml
+++ b/.github/workflows/man-page-build-install.yml
@@ -4,6 +4,9 @@ on:
   push:
   pull_request:
 
+permissions:
+  contents: read
+
 jobs:
   man-pages-build-install-without-modules:
     runs-on: ubuntu-latest
